--- a/GroupMeetup/GroupMeetup/Views/SignUpPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/SignUpPage.xaml
@@ -33,10 +33,11 @@
                     <Entry Text="{Binding FirstName}"
                        Placeholder="First Name"
                        x:Name="firstNameField"
-                           BackgroundColor="#e4e2de"
-                           TextColor="Black"
+                       BackgroundColor=" #13a3f9"
+                       TextColor="White"
                        Grid.Row="0" 
                        Grid.Column="1"
+                          
                        />
 
                     <!-- <Entry Text="{Binding MiddleName}"
@@ -49,8 +50,8 @@
                     <Entry Text="{Binding LastName}"
                            Placeholder="Last Name"
                            x:Name="lastNameField"
-                           BackgroundColor="#e4e2de"
-                           TextColor="Black"
+                           BackgroundColor=" #13a3f9"
+                       TextColor="White"
                            Grid.Row="1" Grid.Column="1"
                            />
 
@@ -65,8 +66,8 @@
                     <Entry Text="{Binding Username}"
                            x:Name="usernameSignup"
                            Placeholder="Username"
-                           BackgroundColor="#e4e2de"
-                           TextColor="Black"
+                           BackgroundColor=" #13a3f9"
+                       TextColor="White"
                             Grid.Row="2" Grid.Column="1"
                            />
 
@@ -74,8 +75,8 @@
                            x:Name="passwordSignup"
                            Placeholder="Password"
                            IsPassword="True"
-                           BackgroundColor="#e4e2de"
-                           TextColor="Black"
+                           BackgroundColor=" #13a3f9"
+                       TextColor="White"
                            Grid.Row="3" Grid.Column="1"
                            />
 
@@ -83,15 +84,18 @@
                            x:Name="passwordSignupRepeat"
                            Placeholder="Repeat Password"
                            IsPassword="True"
-                           BackgroundColor="#e4e2de"
-                           TextColor="Black"
+                           BackgroundColor=" #13a3f9"
+                       TextColor="White"
                             Grid.Row="4" Grid.Column="1"
                            />
 
 
-                    <Button Text="Sign up"
-                            BackgroundColor="#72275b"
-                            TextColor="AntiqueWhite"
+                    <Button Text="SIGN UP"
+                            BackgroundColor="#ffffff"
+                        TextColor="#01a1ff"
+                            WidthRequest="70"
+                        HeightRequest="50"
+                        BorderRadius="25"
                             Grid.Row="6" 
                             Grid.Column="1"
                             Clicked="SignUpButtonClicked"/>
