--- a/GroupMeetup/GroupMeetup/Views/HomePage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/HomePage.xaml
@@ -3,15 +3,15 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:GroupMeetup.TabbedPages"
             x:Class="GroupMeetup.HomePage"
-            BackgroundColor="#00313c"
+            BackgroundColor="#01a1ff"
             BarTextColor="AntiqueWhite"
 
     >
-    <TabbedPage.ToolbarItems>
-      <!---  <ToolbarItem Text="Add Event" Icon="addperson_logo.png" Clicked="OnButtonClicked"></ToolbarItem>-->
+    <!--- <TabbedPage.ToolbarItems>
+        <ToolbarItem Text="Add Event" Icon="addperson_logo.png" Clicked="OnButtonClicked"></ToolbarItem>
         <ToolbarItem Icon="logout_logo.png" Clicked="Logout_Clicked"></ToolbarItem>
         <ToolbarItem Icon="account_logo.png" Clicked="Account_Clicked"></ToolbarItem>
-    </TabbedPage.ToolbarItems>
+    </TabbedPage.ToolbarItems>-->
   <!--Pages can be added as references or inline-->
     <!-- <local:FriendsPage></local:FriendsPage>
     <local:NotificationPage></local:NotificationPage>
