--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/EventPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/EventPage.xaml
@@ -9,30 +9,97 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-
         <AbsoluteLayout>
+            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                <Label Text="Group meetings you lead">
+                </Label>
+                <ListView x:Name="MeetingsListViewLead"
+                              x:FieldModifier="public"
+                              ItemTapped="MeetingsListViewLead_ItemTapped" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell Height="30">
+                                <StackLayout Orientation="Horizontal">
+                                    <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
+                                    <StackLayout Orientation="Vertical" Margin="5,5,10,5">
+                                        <Label Text="{Binding Name, StringFormat='Subject: {0}'}"/>
+                                        <Label Text="{Binding MeetupLocation, StringFormat='Where: {0}'}"/>
+                                        <Label Text="{Binding MeetupDateTime, StringFormat='When: {0}'}"/>
+                                    </StackLayout>
+                                </StackLayout>
+                            </ViewCell>
 
-  
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
-            <ListView x:Name="MeetingsListView" >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <TextCell Text="{Binding Subject}" Detail="{Binding Location.DisplayName}"></TextCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                <Label Text="Group meetings you're in" ></Label>
+                <ListView x:Name="MeetingsListViewJoin"
+                          ItemTapped="MeetingsListViewJoin_ItemTapped">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextCell Text="{Binding Name}" Detail="{Binding MeetupDateTime}"></TextCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
-            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="1,1.18,0.5,0.25">
-                <Button Image="add_logo.png"
-                        BackgroundColor="#72275b"
-                    Clicked="NewEvent_Clicked"
-                    WidthRequest="80" 
-                    HeightRequest="80" 
-                    BorderRadius="40"
+                <!-- <Button Text="Refresh" Clicked="Button_Clicked" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0,1, 50,20"></Button> -->
+                <AbsoluteLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="1,1.18,0.5,0.25">
+                    <Button Image="add_logo.png"
+                            BackgroundColor="#72275b"
+                        Clicked="NewEvent_Clicked"
+                        WidthRequest="80" 
+                        HeightRequest="80" 
+                        BorderRadius="40"
                    
-                    />
+                        />
+                </AbsoluteLayout>
             </StackLayout>
-            
+            <ContentView x:Name="EventOverlay" 
+                                     x:FieldModifier="public"
+                                     AbsoluteLayout.LayoutBounds="0, 0, 1, 1" 
+                                     AbsoluteLayout.LayoutFlags="All" 
+                                     Padding="10, 0"
+                                     IsVisible="false" >
+                <StackLayout Padding="10" BackgroundColor="#8CCDC2" HorizontalOptions="Center" VerticalOptions="Center">
+                    <!--<Label x:Name="LabelSelectItem" 
+                                       TextColor="#FAEBDO"
+                                       HorizontalOptions="Center"/>-->
+                    <StackLayout Orientation="Vertical">
+                        <Button Text="View Map"
+                                    Clicked="ViewMapLead_Clicked"/>
+                        <Button Text="Add/Remove Participants"
+                                    Clicked="AddRemove_Clicked"/>
+                        <Button Text="Edit Event"
+                                    Clicked="Edit_Clicked"/>
+                        <!--<Button Text="Cancel Event"
+                                    Clicked="Cancel_Clicked"/> -->
+                        <Button Text="Close"
+                                    Clicked="Close_Clicked"/>
+                    </StackLayout>
+                </StackLayout>
+            </ContentView>
+            <ContentView x:Name="EventOverlayJoin" 
+                                     x:FieldModifier="public"
+                                     AbsoluteLayout.LayoutBounds="0, 0, 1, 1" 
+                                     AbsoluteLayout.LayoutFlags="All" 
+                                     Padding="10, 0"
+                                     IsVisible="false" >
+                <StackLayout Padding="10" BackgroundColor="#8CCDC2" HorizontalOptions="Center" VerticalOptions="Center">
+                    <!--<Label x:Name="LabelSelectItem" 
+                                       TextColor="#FAEBDO"
+                                       HorizontalOptions="Center"/>-->
+                    <StackLayout Orientation="Vertical">
+                        <Button Text="View Map"
+                                    Clicked="ViewMapJoin_Clicked"/>
+                        <!--<Button Text="Leave Group"
+                                    Clicked="Leave_Clicked"/>-->
+                        <Button Text="Close"
+                                    Clicked="Close_Clicked"/>
+                    </StackLayout>
+                </StackLayout>
+            </ContentView>
+
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
