--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GroupMeetup.TabbedPages.NotificationPage"
@@ -6,12 +6,6 @@
              BackgroundColor="White"
              >
     <ContentPage.Content>
-        <!--<StackLayout>
-                <Label Text="Notification Page"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            </StackLayout> -->
-
         <ListView x:Name="NotificationsList" x:FieldModifier="public" ItemTapped="NotificationsList_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
