--- a/GroupMeetup/GroupMeetup/Views/AddRemoveFriendsEvent.xaml
+++ b/GroupMeetup/GroupMeetup/Views/AddRemoveFriendsEvent.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GroupMeetup.Views.AddRemoveFriendsEvent">
+             x:Class="GroupMeetup.Views.AddRemoveFriendsEvent"
+             BackgroundColor="#01a1ff">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Add/Remove Friends"/>
@@ -15,8 +16,8 @@
                         <ViewCell Height="30">
                             <StackLayout Orientation="Horizontal">
                                 <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
-                                <StackLayout Orientation="Vertical" Margin="5,5,10,5">
-                                    <Label Text="{Binding Username, StringFormat='Username: {0}'}"/>
+                                <StackLayout Orientation="Vertical" Margin="5,5,10,5" BackgroundColor="White">
+                                    <Label Text="{Binding Username, StringFormat='Username: {0}'}" FontSize="Medium" FontAttributes="Bold" TextColor="#01a1ff"/>
                                 </StackLayout>
                             </StackLayout>
                         </ViewCell>
