--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GroupMeetup.TabbedPages.FriendsPage"
-             Title="Friends"
+             Icon="friend_logo.png"
              BackgroundColor="#01a1ff">
     <ContentPage.Content>
         <AbsoluteLayout>
@@ -10,11 +10,11 @@
                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1" 
                 AbsoluteLayout.LayoutFlags="All">
 
-                <ListView x:Name="FriendsList" x:FieldModifier="public" ItemTapped="FriendsList_ItemTapped" BackgroundColor="White">
+                <ListView x:Name="FriendsList" x:FieldModifier="public" ItemTapped="FriendsList_ItemTapped" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell Height="60">
-                                <StackLayout Orientation="Horizontal">
+                                <StackLayout Orientation="Horizontal" BackgroundColor="White">
                                     <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
                                     <StackLayout Orientation="Vertical" Margin="5,5,10,5">
                                         <Label Text="{Binding Username}" FontSize="Medium" FontAttributes="Bold" TextColor="#01a1ff"/>
@@ -39,7 +39,7 @@
                     />
 
             </StackLayout>
-            <Button Text="Refresh Friends List" Clicked="FriendRefresh_Clicked" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.01,0.99,100,50"/>
+            <Button Text="Refresh Friends List" Clicked="FriendRefresh_Clicked" TextColor="White" FontAttributes="Bold"  BackgroundColor="#72275b" BorderRadius="30" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.01,0.99,100,50"/>
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
