--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
@@ -3,17 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GroupMeetup.TabbedPages.NotificationPage"
              Icon="notification_logo.png"
-             BackgroundColor="White"
+             BackgroundColor="#01a1ff"
              >
     <ContentPage.Content>
         <ListView x:Name="NotificationsList" x:FieldModifier="public" ItemTapped="NotificationsList_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell Height="60">
-                        <StackLayout Orientation="Horizontal">
+                        <StackLayout Orientation="Horizontal" BackgroundColor="White">
                             <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
                             <StackLayout Orientation="Vertical" Margin="5,5,10,5">
-                                <Label Text="{Binding NotificationContent}"/>
+                                <Label Text="{Binding NotificationContent}" FontSize="Medium" FontAttributes="Bold" TextColor="#01a1ff"/>
                             </StackLayout>
                         </StackLayout>
                     </ViewCell>
